--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
   "dependencies": {
     "@nestjs/common": "^6.0.0",
     "@nestjs/core": "^6.0.0",
+    "@nestjs/microservices": "^6.0.4",
     "@nestjs/mongoose": "^6.0.0",
     "@nestjs/platform-express": "^6.0.0",
+    "amqp-connection-manager": "^2.3.0",
+    "amqplib": "^0.5.3",
     "class-transformer": "^0.2.0",
     "class-validator": "^0.9.1",
     "mongoose": "^5.4.20",
@@ -33,11 +36,12 @@
   },
   "devDependencies": {
     "@nestjs/testing": "^6.0.0",
+    "@types/amqplib": "^0.5.11",
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.13",
+    "@types/mongoose": "^5.3.24",
     "@types/node": "^10.12.18",
     "@types/supertest": "^2.0.7",
-    "@types/mongoose": "^5.3.24",
     "jest": "^23.6.0",
     "nodemon": "^1.18.9",
     "prettier": "^1.15.3",
